@@ -1,6 +1,7 @@
 package com.example.vrc.authentication.utilities;
 
 
+import io.jsonwebtoken.Jwt;
 import jakarta.mail.MessagingException;
 import jakarta.mail.internet.MimeMessage;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -13,17 +14,19 @@ import org.springframework.stereotype.Component;
 public class EmailUtil {
     @Autowired
     private JavaMailSender javaMailSender;
+    @Autowired
+    private JwtUtil jwtUtil;
 
     public void sendSetEmailPassword(String email) throws MessagingException {
+        String token = jwtUtil.generateToken(email);
         MimeMessage mimeMessage = javaMailSender.createMimeMessage();
         MimeMessageHelper mimeMessageHelper = new MimeMessageHelper(mimeMessage);
         mimeMessageHelper.setTo(email);
-        mimeMessageHelper.setSubject("Set Password");
-        mimeMessageHelper.setText("""
-        <div>
-          <a href="http://localhost:8080/set-password?email=%s" target="_blank">Click link to reset password</a>
-        </div>
-        """.formatted(email), true);
+        String resetLink = "http://localhost:8080/api/set-password/" + token;
+
+        String emailContent = String.format("<p>Click the link to set your password: <a href='%s'>%s</a></p>", resetLink, resetLink);
+
+        mimeMessageHelper.setText(emailContent, true);
 
         javaMailSender.send(mimeMessage);
     }
